--- a/style.css
+++ b/style.css
@@ -1,55 +1,51 @@
-header {
+li {
+    display: inline;
     font-family: arial,sans-serif;
     font-size: 13px;
     opacity: 0.75;
-    box-sizing: border-box;    
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 50px, 50px, auto, 50px, 50px, 50px, 50px;
-    grid-template-rows: 50px, auto, 50px, 50px, 50px, 50px, 50px;
-    grid-template-areas: 
-        "header1 header2 . header4 header5 header6 header7"
-        ". . logo logo logo . ."
-        ". . search search search . ."
-        ". . button button2 . . ."
-        ". . lang link . . ."
-        "foottop . . . . . ."
-        "footbot1 footbot2 footbot3 . footbot5 footbot6 footbot7";
-    background-color: yellow; 
-    grid-gap: 5px;
-}
-
-#form {
-    grid-area: search;
-}
-
-#search {
-    grid-area: button;
-}
-
-#lucky {
-    grid-area: button2;
-}
-
-#about {
-    grid-area: header1;
-}
-
-#store {
-    grid-area: header2;
+    margin: 20px;
 }
 
 footer {
-    font-family: arial,sans-serif;
-    opacity: 0.75;
+    background-color: rgba(0,0,0,.10);
+    padding: 5px;
+    border: 1px solid lightgray;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
 }
 
-.foottop {
+.foottop li {
     font-size: 15px;
 }
 
-.footbot {
-    font-size: 13px;
+.foottop {
+    border-bottom: 1px solid lightgray;
+}
+
+div {
+    font-family: arial,sans-serif;
+}
+
+.logo {
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 100px;
+}
+
+#search {
+    margin: 30px;
+}
+
+.form {
+    text-align: center;
+}
+
+.box {
+    width: 500px;
+}
+
+button {
+    opacity: 0.75;
 }
